<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_250"
    android:layout_height="@dimen/dp_127"
    android:orientation="vertical"
    android:background="@drawable/bg_white_lin_gare_4radius">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_77"
        android:gravity="center"
        android:textColor="@color/gray_deep"
        android:textSize="@dimen/sp_18"
        android:text="@string/giveupservicedilaing"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/gray_f2">
        
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:background="@color/gray_f2">
        <TextView
            android:id="@+id/dailog_tv_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/gray_light"
            android:text="@string/cancel"/>

        <TextView
            android:id="@+id/dailog_tv_sure"
            android:layout_marginLeft="@dimen/dp_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/main_blue"
            android:text="@string/str_sure"/>
    </LinearLayout>
</LinearLayout>
