<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_terminalmanufacturer1"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_manufacturerName"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" "
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_16"/>


    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/deep_line">

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_devicetype"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_deviceMode"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" "
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_16"/>


    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/deep_line">

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_oui"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_oui"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" "
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_16"/>


    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/deep_line">

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_zdSN1"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_terminalSN"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" "
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_16"/>


    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/deep_line">

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_attributionarea"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_attributionArea"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" "
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_16"/>


    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/deep_line">

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_broadbandaccount1"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_wbandAccount"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" "
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_16"/>


    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/deep_line">

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_terminalregistrationstatus"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_terminalRegisterStatus"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" "
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_16"/>


    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/deep_line">

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_terminalmodel"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_terminalModel"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" "
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_16"/>


    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/deep_line">

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_firmware"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_firmwareVersion"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" "
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_16"/>


    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/deep_line">

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_hardwareversion"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_hardwareVersion"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" "
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_16"/>


    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/deep_line">

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_ip"
            android:textColor="@color/gray_deep"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_ipAddress"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=" "
            android:textColor="@color/gray_light"
            android:textSize="@dimen/sp_16"/>


    </RelativeLayout>

</LinearLayout>
