<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_175"
    android:orientation="vertical"
    android:background="@color/gray_f2">

    <LinearLayout
        android:layout_marginTop="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_marginTop="@dimen/dp_8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp_16">
            <TextView
                android:layout_width="@dimen/dp_80"
                android:layout_height="match_parent"
                android:text="@string/jobnumber"
                android:gravity="center_vertical"
                android:textColor="@color/gray_deep"
                android:textSize="@dimen/sp_16"/>

            <TextView
                android:id="@+id/item_tv_workOrderNo"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textColor="@color/gray_light"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/dp_8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp_16">
            <TextView
                android:layout_width="@dimen/dp_80"
                android:layout_height="match_parent"
                android:text="@string/typeofservice"
                android:gravity="center_vertical"
                android:textColor="@color/gray_deep"
                android:textSize="@dimen/sp_16"/>

            <TextView
                android:id="@+id/item_tv_businessType"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textColor="@color/gray_light"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/dp_8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp_16">
            <TextView
                android:layout_width="@dimen/dp_80"
                android:layout_height="match_parent"
                android:text="@string/broadbandaccount"
                android:gravity="center_vertical"
                android:textColor="@color/gray_deep"
                android:textSize="@dimen/sp_16"/>

            <TextView
                android:id="@+id/item_tv_wbandAccount"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textColor="@color/gray_light"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/dp_8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp_16">
            <TextView
                android:layout_width="@dimen/dp_80"
                android:layout_height="match_parent"
                android:text="@string/logid"
                android:gravity="center_vertical"
                android:textColor="@color/gray_deep"
                android:textSize="@dimen/sp_16"/>

            <TextView
                android:id="@+id/item_tv_loid"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/sp_16"
                android:textColor="@color/gray_light"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp_16">
            <TextView
                android:layout_width="@dimen/dp_80"
                android:layout_height="match_parent"
                android:text="@string/workingtime"
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/gray_deep"/>

            <TextView
                android:id="@+id/item_tv_workOrderDayTime"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/sp_16"
                android:textColor="@color/gray_light"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
