<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f2"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_160"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/str_thisdiagnosisresult"
                android:gravity="center"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/gray_deep"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/diagnosticstatus"
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/gray_light"/>
            <TextView
                android:id="@+id/tv_diagnosticsState"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text=""
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/gray_deep"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/diagnosticresponsetime"
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/gray_light"/>
            <TextView
                android:id="@+id/tv_responseTime"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text=""
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/gray_deep"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/numberofjumps"
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/gray_light"/>
            <TextView
                android:id="@+id/tv_hopsNumberOfEntries"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text=""
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/gray_deep"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_routeHopsListData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <!--<include-->
        <!--layout="@layout/item_traceroutediagnosis_result"></include>-->
</LinearLayout>
